# chef-de-vibe

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  claude-container  claude-container.py  claude-hook-pretooluse.sh  claude-settings.json  docker-compose.e2e.yml  docker-compose.yml  e2e.Dockerfile  flake.nix  test_claude_container.py  test_coverage_analysis.md
.claude/: settings.local.json
.github/workflows/: build-artifacts.yml  check-claude-code-version.yml  check-upstream-updates.yml  docker-build-push.yml  homebrew-bottle.yml  homebrew.yml  nix.yml  release.yml  test.yml  update-homebrew.yml
Formula/: chef-de-vibe.rb
e2e/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: ChatWindow.ts  NewChatDialog.ts  SessionList.ts
e2e/tests/: new-chat.spec.ts
frontend/: .npmrc  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/.claude/: settings.local.json
frontend/src/: App.css  App.tsx  index.css
src/: README.md  claude_process.rs  config.rs  discovery.rs  error.rs  lib.rs  main.rs  models.rs  session_manager.rs
src/api/: handlers.rs  mod.rs  static_files.rs  websocket.rs
tests/: README.md  advanced_edge_cases.rs  approval_system.rs  e2e_tests.rs  error_handling_matrix.rs  message_processing.rs  process_management.rs  session_discovery_edge_cases.rs  session_lifecycle.rs  session_management.rs  session_resume_e2e.rs  websocket_communication.rs  working_directory_e2e.rs
tests/helpers/: MOCK_CLAUDE_MIGRATION.md  logging.rs  mod.rs  (+2 more)
(+34 files in other folders)
