[package]
name = "chef-de-vibe"
version = "0.2.2"
edition = "2021"

[lints.clippy]
all = "warn"
pedantic = "warn"
correctness = "warn"
complexity = "warn"
perf = "warn"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.0"
walkdir = "2.0"
rayon = "1.10"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nix = { version = "0.29", features = ["signal", "process"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8.5", features = ["debug-embed", "include-exclude"] }
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots", "connect"], default-features = false }
url = "2.5"
futures-util = "0.3"
